--- a/homework_4/index.html
+++ b/homework_4/index.html
@@ -32,10 +32,10 @@
         </header>
         <img src="asssets/intro-img_1.png" alt="Railway">   
         <section class="posts">
-            <h2><a href="##">- our Recent posts</a></h2>
+            <h2 class="link"><a href="##">- our Recent posts</a></h2>
             <div class="all-posts-container">
                 <div class="one-post-container">
-                    <img src="asssets/posts/post-img_1.png" alt="brewed tea">
+                    <img src="asssets/cards/card-post-1.png" alt="brewed tea">
                     <div class="card-text-container">
                         <h3>Aenean Adipiscing Etiam Vestibulum</h3>
                         <h4>Photography, Journal   /   <a href="##">9 Comments</a></h4>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="one-post-container">
-                    <img src="asssets/posts/post1img_1.png" alt="Table Art">
+                    <img src="asssets/cards/card-post-2.png" alt="Table Art">
                     <div class="card-text-container">
                         <h3>Aenean Adipiscing Etiam Vestibulum</h3>
                         <h4>Photography, Journal   /   <a href="##">9 Comments</a></h4>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="one-post-container">
-                    <img src="asssets/posts/post4img_1.png" alt="Rainy Day">
+                    <img src="asssets/cards/card-post-3.png" alt="Rainy Day">
                     <div class="card-text-container">
                         <h3>Aenean Adipiscing Etiam Vestibulum</h3>
                         <h4>Photography, Journal   /   <a href="##">9 Comments</a></h4>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="one-post-container">
-                    <img src="asssets/posts/post6img_1.png" alt="Flowers">
+                    <img src="asssets/cards/card-post-4.png" alt="Flowers">
                     <div class="card-text-container">
                         <h3>Aenean Adipiscing Etiam Vestibulum</h3>
                         <h4>Photography, Journal   /   <a href="##">9 Comments</a></h4>
@@ -80,24 +80,24 @@
     <section class="shots">
         <div class="container">
             <div class="shots-text-wrapper">
-                <h2 id="first-shots-text"><a href="##">- Latest Instagram Shots</a></h2>
-                <h2 id="second-shots-text"><a href="##">go to our instagram page -</a></h2>
+                <h2 class="link"><a href="##">- Latest Instagram Shots</a></h2>
+                <h2 class="link link-small"><a href="##">go to our instagram page -</a></h2>
             </div>
             <div class="shots-container">
-                <img src="asssets/posts/post-1_1.png" alt="Bicycle">
-                <img src="asssets/posts/post-2_1.png" alt="Door">
-                <img src="asssets/posts/post-3_1.png" alt="Wires">
-                <img src="asssets/posts/post-4_1.png" alt="Car">
+                <img src="asssets/sliders/slider-post-1.png" alt="Bicycle">
+                <img src="asssets/sliders/slider-post-2.png" alt="Door">
+                <img src="asssets/sliders/slider-post-3.png" alt="Wires">
+                <img src="asssets/sliders/slider-post-4.png" alt="Car">
             </div>
         </div>
     </section>
     <footer>
-        <h2><a href="##">- get in touch with us -</a></h2>
-        <p class="footer-text-not-phone">Maecenas faucibus molli interdum.
+        <h2 class="link link-white"><a href="##">- get in touch with us -</a></h2>
+        <p class="footer-text-not-mobile">Maecenas faucibus molli interdum.
         Cras mattis consectetur purus sitor amet sed donec malesuada ullamcorper odio. 
         Curabitur blandit tempus porttitor vollisky inceptos mollisestor.
         </p>
-        <p class="footer-text-phone">Maecenas faucibus molli interdum.
+        <p class="footer-text-mobile">Maecenas faucibus molli interdum.
         Cras mattis consectetur purus sitor amet sed donec malesuada ullamcorper odio.
         </p>
         <div class="footer-logos">
