finish navbar for mobile

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -26,16 +26,17 @@
                     <li class="nav-menu-item">Buying Options</li>
                     <li class="nav-menu-item">Support</li>
                 </ul>
-                <button>Buy Now</button>
+                <button class="purple-button nav-purple-button">Buy Now</button>
                 <img class = "burger-menu" src="assets/burger_menu/burger-menu.png" alt="burger-menu">
             </nav>
         </div>
         <h1>Fork App</h1>
-        <h3>A real gamechanger in the world of web development</h3>
+        <h3 class="container">A real gamechanger in the world of web development</h3>
         <p>V. 2.8 FOR MAC AND WINDOWS</p>
     </header>
 
     <main>
+        <button class="purple-button download-purple-button">Download For Free Now</button>
     </main>
 
     <section id="features">
