added 2 sections in mobile version

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -34,12 +34,50 @@
         <h3 class="container">A real gamechanger in the world of web development</h3>
         <p>V. 2.8 FOR MAC AND WINDOWS</p>
     </header>
-
     <main>
         <button class="purple-button download-purple-button">Download For Free Now</button>
+        <p id="free-trial-period">Unlimited 30-Days Trial Period</p>
+        <h2>REVOLUTIONARY EDITOR</h2>
+        <p id="revolutionaty-editor-text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
+        <img id="github-first-part" src="assets/github_buttons/github-buttons_small_1.png" alt="github-buttons-watch-star">
+        <img id="github-second-part" src="assets/github_buttons/github-buttons-small_2.png" alt="github-button-fork">
     </main>
-
     <section id="features">
+        <h2 class="container">&lt;Here is what you get&gt;</h2>
+        <div class="container features-wrapper">
+            <div>
+                <img class="icon-img" src="assets/icons/icon_1.png" alt="Website search icon">
+                <div>
+                    <p class="features-description-first-text">Creatred to Make The Web Better</p>
+                    <p class="features-description-second-text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue. 
+                    </p>
+                </div>
+            </div>
+            <div>
+                <img class="icon-img" src="assets/icons/icon_2.png" alt="Gear icon for settings">
+                <div>
+                    <p class="features-description-first-text">Incredibly Powerful Tool</p>
+                    <p class="features-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
+                    </p>
+                </div>
+            </div>
+            <div>
+                <img class="icon-img" src="assets/icons/icon_3.png" alt="Flask icon representing a laboratory">
+                <div>
+                    <p class="features-description-first-text">Experimental Stuff</p>
+                    <p class="features-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
+                    </p>
+                </div>
+            </div>
+            <div>
+                <img class="icon-img" src="assets/icons/icon_4.png" alt="Clock icon indicating time">
+                <div>
+                    <p class="features-description-first-text">Creatred to Make The Web Better</p>
+                    <p class="features-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="reviews">
