--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div class="background-wrapper">
+        <div class="background-nav-wrapper">
             <nav class="container">
                 <div class="logo">
                     <img src="assets/main_logo/logo.png" alt="main_logo">
@@ -78,12 +78,83 @@
                 </div>
             </div>
         </div>
+        <img id="ide" src="assets/ide_png/ide.png" alt="ide">
     </section>
-
-    <section id="reviews">
-    </section>
-
-    <section id="price">
+    <section class="background-reviews-price-wrapper" id="reviews-and-pricing">
+        <h2 class="reviews-and-pricing-main-text" id="reviews-main-text">People Are Talking About Fork</h2>
+        <div class="logos-wrapper container">
+            <div>
+                <img class="logo-img" src="assets/logos/logo_1.png" alt="Smashing magazine">
+                <p class="logo-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. 
+                </p>
+            </div>
+            <div>
+                <img class="logo-img" src="assets/logos/logo_2.png" alt="Codrops">
+                <p class="logo-text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend nibh.
+                </p>
+            </div>
+            <div>
+                <img class="logo-img" src="assets/logos/logo_3.png" alt="W">
+                <p class="logo-text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula. 
+                </p>
+            </div>
+            <div>
+                <img class="logo-img" src="assets/logos/logo_4.png" alt="Pixel Buddha">
+                <p class="logo-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. 
+                </p>
+            </div>
+            <div>
+                <img class="logo-img" src="assets/logos/logo_5.png" alt="Creative Bloq">
+                <p class="logo-text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat faucibus. 
+                </p>
+            </div>
+            <div>
+                <img class="logo-img" src="assets/logos/logo_6.png" alt="TNW">
+                <p class="logo-text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.
+                </p>
+            </div>
+        </div>
+        <p>Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+        </p>
+        <div class="line-review container"></div>
+        <h2 class="reviews-and-pricing-main-text" id="price-main-text">Fork Subscription Pricing</h2>
+        <div class="container price-wrapper">
+            <div class="subscription-card">
+                <h3 class="subscription-name">STUDENTS</h3>
+                <h2 class="subscription-price">$29</h2>
+                <h5>PER MONTH</h5>
+                <div class="subscription-line"></div>
+                <p class="subscription-description-first-text">Personal License</p>
+                <button class="subscription-button"></button>
+            </div>
+            <div class="subscription-card">
+                <h3 class="subscription-name">PROFESSIONAL</h3>
+                <h2 class="subscription-price">$59</h2>
+                <h5>PER MONTH</h5>
+                <div class="subscription-line"></div>
+                <p class="subscription-description-first-text">Personal License</p>
+                <p class="subscription-description-second-text">Email Support</p>
+                <button class="subscription-button"></button>
+            </div>
+            <div class="subscription-card">
+                <h3 class="subscription-name">aGENCY</h3>
+                <h2 class="subscription-price">$99</h2>
+                <h5>PER MONTH</h5>
+                <div class="subscription-line"></div>
+                <p class="subscription-description-first-text">1-12 Team Members</p> 
+                <p class="subscription-description-second-text">Phone Support</p>
+                <button class="subscription-button"></button>
+            </div>
+            <div class="subscription-card">
+                <h3 class="subscription-name">ENTERPRISE</h3>
+                <h2 class="subscription-price">$159</h2>
+                <h5 class="subscription-line">PER MONTH</h5>
+                <div></div>
+                <p class="subscription-description-first-text">Unlimite Team Members</p>
+                <p class="subscription-description-second-text">24/ 7 Phone Support</p>
+                <button class="subscription-button"></button>
+            </div>
+        </div>
     </section>
 </body>
 </html>
