finish mobile version without hover

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -31,7 +31,7 @@
             </nav>
         </div>
         <h1>Fork App</h1>
-        <h3 class="container">A real gamechanger in the world of web development</h3>
+        <h3 class="container">A Real Gamechanger In The World Of Web-Development</h3>
         <p>V. 2.8 FOR MAC AND WINDOWS</p>
     </header>
     <main>
@@ -78,9 +78,9 @@
                 </div>
             </div>
         </div>
-        <img id="ide" src="assets/ide_png/ide.png" alt="ide">
+        <img id="ide-mobile" src="assets/ides/ide-mobile.png" alt="ide">
     </section>
-    <section class="background-reviews-price-wrapper" id="reviews-and-pricing">
+    <section id="reviews">
         <h2 class="reviews-and-pricing-main-text" id="reviews-main-text">People Are Talking About Fork</h2>
         <div class="logos-wrapper container">
             <div>
@@ -114,18 +114,20 @@
                 </p>
             </div>
         </div>
-        <p>Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+        <p class="container">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
         </p>
+    </section>
+    <section id="pricing">
         <div class="line-review container"></div>
         <h2 class="reviews-and-pricing-main-text" id="price-main-text">Fork Subscription Pricing</h2>
-        <div class="container price-wrapper">
+        <div class="price-wrapper">
             <div class="subscription-card">
                 <h3 class="subscription-name">STUDENTS</h3>
                 <h2 class="subscription-price">$29</h2>
                 <h5>PER MONTH</h5>
                 <div class="subscription-line"></div>
-                <p class="subscription-description-first-text">Personal License</p>
-                <button class="subscription-button"></button>
+                <p class="subscription-description-text">Personal License</p>
+                <button class="subscription-button">PURCHASE</button>
             </div>
             <div class="subscription-card">
                 <h3 class="subscription-name">PROFESSIONAL</h3>
@@ -134,25 +136,25 @@
                 <div class="subscription-line"></div>
                 <p class="subscription-description-first-text">Personal License</p>
                 <p class="subscription-description-second-text">Email Support</p>
-                <button class="subscription-button"></button>
+                <button class="subscription-button">PURCHASE</button>
             </div>
             <div class="subscription-card">
-                <h3 class="subscription-name">aGENCY</h3>
+                <h3 class="subscription-name">AGENCY</h3>
                 <h2 class="subscription-price">$99</h2>
                 <h5>PER MONTH</h5>
                 <div class="subscription-line"></div>
                 <p class="subscription-description-first-text">1-12 Team Members</p> 
                 <p class="subscription-description-second-text">Phone Support</p>
-                <button class="subscription-button"></button>
+                <button class="subscription-button">PURCHASE</button>
             </div>
             <div class="subscription-card">
                 <h3 class="subscription-name">ENTERPRISE</h3>
                 <h2 class="subscription-price">$159</h2>
-                <h5 class="subscription-line">PER MONTH</h5>
-                <div></div>
+                <h5 >PER MONTH</h5>
+                <div class="subscription-line"></div>
                 <p class="subscription-description-first-text">Unlimite Team Members</p>
                 <p class="subscription-description-second-text">24/ 7 Phone Support</p>
-                <button class="subscription-button"></button>
+                <button class="subscription-button">PURCHASE</button>
             </div>
         </div>
     </section>
