finish mediun version without hover 768px-1200px

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -16,101 +16,122 @@
     <header>
         <div class="background-nav-wrapper">
             <nav class="container">
-                <div class="logo">
-                    <img src="assets/main_logo/logo.png" alt="main_logo">
-                    <h4 id="logo-name">FORKIO</h4>
+                <!-- nav-main-small-screen nav-main-medium-screen nav-main-big-screen -->
+                <div class="nav-main">
+                    <div class="logo">
+                        <img src="assets/main_logo/logo.png" alt="main_logo">
+                        <h4 id="logo-name">FORKIO</h4>
+                    </div>
+                    <div class="nav-menu-and-button-wrapper-big-scren">
+                        <ul class="nav-menu nav-menu-big-screen">
+                            <li>Overview</li>
+                            <li>About Fork</li>
+                            <li>Buying Options</li>
+                            <li>Support</li>
+                        </ul>
+                        <button class="purple-button nav-purple-button">Buy Now</button>
+                    </div>
+                    <img class = "burger-menu" src="assets/burger_menu/burger-menu.png" alt="burger-menu">
                 </div>
-                <ul class="nav-menu">
-                    <li class="nav-menu-item">Overview</li>
-                    <li class="nav-menu-item">About Fork</li>
-                    <li class="nav-menu-item">Buying Options</li>
-                    <li class="nav-menu-item">Support</li>
+                <ul class="nav-menu nav-menu-medium-screen">
+                    <li>Overview</li>
+                    <li>About Fork</li>
+                    <li>Buying Options</li>
+                    <li>Support</li>
                 </ul>
-                <button class="purple-button nav-purple-button">Buy Now</button>
-                <img class = "burger-menu" src="assets/burger_menu/burger-menu.png" alt="burger-menu">
             </nav>
         </div>
         <h1>Fork App</h1>
         <h3 class="container">A Real Gamechanger In The World Of Web-Development</h3>
         <p>V. 2.8 FOR MAC AND WINDOWS</p>
     </header>
-    <main>
+    <main class="container">
         <button class="purple-button download-purple-button">Download For Free Now</button>
         <p id="free-trial-period">Unlimited 30-Days Trial Period</p>
         <h2>REVOLUTIONARY EDITOR</h2>
         <p id="revolutionaty-editor-text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
+        <img id ="github-buttons" src="assets/github_buttons/github_buttons.png" alt="github-buttons">
         <img id="github-first-part" src="assets/github_buttons/github-buttons_small_1.png" alt="github-buttons-watch-star">
         <img id="github-second-part" src="assets/github_buttons/github-buttons-small_2.png" alt="github-button-fork">
     </main>
     <section id="features">
         <h2 class="container">&lt;Here is what you get&gt;</h2>
         <div class="container features-wrapper">
-            <div>
-                <img class="icon-img" src="assets/icons/icon_1.png" alt="Website search icon">
-                <div>
-                    <p class="features-description-first-text">Creatred to Make The Web Better</p>
-                    <p class="features-description-second-text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue. 
+            <div class="feature-card">
+                <div class="feature-img-wrapper">
+                    <img class="icon-img" src="assets/icons/icon_1.png" alt="Website search icon">
+                </div>
+                <div class="feature-description-wrapper">
+                    <p class="feature-description-first-text">Creatred to Make The Web Better</p>
+                    <p class="feature-description-second-text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue. 
                     </p>
                 </div>
             </div>
-            <div>
-                <img class="icon-img" src="assets/icons/icon_2.png" alt="Gear icon for settings">
-                <div>
-                    <p class="features-description-first-text">Incredibly Powerful Tool</p>
-                    <p class="features-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
+            <div class="feature-card">
+                <div class="feature-img-wrapper">
+                    <img class="icon-img" src="assets/icons/icon_2.png" alt="Gear icon for settings">
+                </div>
+                <div class="feature-description-wrapper">
+                    <p class="feature-description-first-text">Incredibly Powerful Tool</p>
+                    <p class="feature-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
                     </p>
                 </div>
             </div>
-            <div>
-                <img class="icon-img" src="assets/icons/icon_3.png" alt="Flask icon representing a laboratory">
-                <div>
-                    <p class="features-description-first-text">Experimental Stuff</p>
-                    <p class="features-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
+            <div class="feature-card">
+                <div class="feature-img-wrapper">
+                    <img class="icon-img" src="assets/icons/icon_3.png" alt="Flask icon representing a laboratory">
+                </div>
+                <div class="feature-description-wrapper">
+                    <p class="feature-description-first-text">Experimental Stuff</p>
+                    <p class="feature-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
                     </p>
                 </div>
             </div>
-            <div>
-                <img class="icon-img" src="assets/icons/icon_4.png" alt="Clock icon indicating time">
-                <div>
-                    <p class="features-description-first-text">Creatred to Make The Web Better</p>
-                    <p class="features-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
+            <div class="feature-card">
+                <div class="feature-img-wrapper">
+                    <img class="icon-img" src="assets/icons/icon_4.png" alt="Clock icon indicating time">
+                </div>
+                <div class="feature-description-wrapper">
+                    <p class="feature-description-first-text">Creatred to Make The Web Better</p>
+                    <p class="feature-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
                     </p>
                 </div>
             </div>
         </div>
         <img id="ide-mobile" src="assets/ides/ide-mobile.png" alt="ide">
+        <img id="ide" src="assets/ides/ide.png" alt="ide">
     </section>
     <section id="reviews">
         <h2 class="reviews-and-pricing-main-text" id="reviews-main-text">People Are Talking About Fork</h2>
-        <div class="logos-wrapper container">
+        <div class="companies-wrapper container">
             <div>
-                <img class="logo-img" src="assets/logos/logo_1.png" alt="Smashing magazine">
-                <p class="logo-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. 
+                <img class="company-img" src="assets/companies/company_1.png" alt="Smashing magazine">
+                <p class="company-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. 
                 </p>
             </div>
             <div>
-                <img class="logo-img" src="assets/logos/logo_2.png" alt="Codrops">
-                <p class="logo-text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend nibh.
+                <img class="company-img" src="assets/companies/company_2.png" alt="Codrops">
+                <p class="company-text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend nibh.
                 </p>
             </div>
             <div>
-                <img class="logo-img" src="assets/logos/logo_3.png" alt="W">
-                <p class="logo-text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula. 
+                <img class="company-img" src="assets/companies/company_3.png" alt="W">
+                <p class="company-text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula. 
                 </p>
             </div>
             <div>
-                <img class="logo-img" src="assets/logos/logo_4.png" alt="Pixel Buddha">
-                <p class="logo-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. 
+                <img class="company-img" src="assets/companies/company_4.png" alt="Pixel Buddha">
+                <p class="company-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. 
                 </p>
             </div>
             <div>
-                <img class="logo-img" src="assets/logos/logo_5.png" alt="Creative Bloq">
-                <p class="logo-text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat faucibus. 
+                <img class="company-img" src="assets/companies/company_5.png" alt="Creative Bloq">
+                <p class="company-text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat faucibus. 
                 </p>
             </div>
             <div>
-                <img class="logo-img" src="assets/logos/logo_6.png" alt="TNW">
-                <p class="logo-text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.
+                <img class="company-img" src="assets/companies/company_6.png" alt="TNW">
+                <p class="company-text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.
                 </p>
             </div>
         </div>
