--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -19,10 +19,11 @@
                 <!-- nav-main-small-screen nav-main-medium-screen nav-main-big-screen -->
                 <div class="nav-main">
                     <div class="logo">
-                        <img src="assets/main_logo/logo.png" alt="main_logo">
+                        <img class="logo-img-hover" src="assets/main_logo/logo-hover.png" alt="main_logo_hover">
+                        <img class="logo-img" src="assets/main_logo/logo.png" alt="main_logo">
                         <h4 id="logo-name">FORKIO</h4>
                     </div>
-                    <div class="nav-menu-and-button-wrapper-big-scren">
+                    <div class="nav-menu-and-button-wrapper-big-screen">
                         <ul class="nav-menu nav-menu-big-screen">
                             <li>Overview</li>
                             <li>About Fork</li>
@@ -48,88 +49,93 @@
     <main class="container">
         <button class="purple-button download-purple-button">Download For Free Now</button>
         <p id="free-trial-period">Unlimited 30-Days Trial Period</p>
-        <h2>REVOLUTIONARY EDITOR</h2>
+        <h2 class="main-text">REVOLUTIONARY EDITOR</h2>
         <p id="revolutionaty-editor-text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
         <img id ="github-buttons" src="assets/github_buttons/github_buttons.png" alt="github-buttons">
         <img id="github-first-part" src="assets/github_buttons/github-buttons_small_1.png" alt="github-buttons-watch-star">
         <img id="github-second-part" src="assets/github_buttons/github-buttons-small_2.png" alt="github-button-fork">
     </main>
-    <section id="features">
-        <h2 class="container">&lt;Here is what you get&gt;</h2>
-        <div class="container features-wrapper">
-            <div class="feature-card">
-                <div class="feature-img-wrapper">
-                    <img class="icon-img" src="assets/icons/icon_1.png" alt="Website search icon">
+    <section id="features" >
+        <div class="container-big-screen">
+            <h2 class="container features-main-text">&lt;Here is what you get&gt;</h2>
+            <div class="container features-wrapper">
+                <div class="feature-card">
+                    <div class="feature-img-wrapper">
+                        <img class="icon-img" src="assets/icons/icon_1.png" alt="Website search icon">
+                    </div>
+                    <div class="feature-description-wrapper">
+                        <p class="feature-description-first-text">Creatred to Make The Web Better</p>
+                        <p class="feature-description-second-text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue. 
+                        </p>
+                    </div>
                 </div>
-                <div class="feature-description-wrapper">
-                    <p class="feature-description-first-text">Creatred to Make The Web Better</p>
-                    <p class="feature-description-second-text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue. 
-                    </p>
+                <div class="feature-card">
+                    <div class="feature-img-wrapper">
+                        <img class="icon-img" src="assets/icons/icon_2.png" alt="Gear icon for settings">
+                    </div>
+                    <div class="feature-description-wrapper">
+                        <p class="feature-description-first-text">Incredibly Powerful Tool</p>
+                        <p class="feature-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
+                        </p>
+                    </div>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-img-wrapper">
+                        <img class="icon-img" src="assets/icons/icon_3.png" alt="Flask icon representing a laboratory">
+                    </div>
+                    <div class="feature-description-wrapper">
+                        <p class="feature-description-first-text">Experimental Stuff</p>
+                        <p class="feature-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
+                        </p>
+                    </div>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-img-wrapper">
+                        <img class="icon-img" src="assets/icons/icon_4.png" alt="Clock icon indicating time">
+                    </div>
+                    <div class="feature-description-wrapper">
+                        <p class="feature-description-first-text">Creatred to Make The Web Better</p>
+                        <p class="feature-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="feature-card">
-                <div class="feature-img-wrapper">
-                    <img class="icon-img" src="assets/icons/icon_2.png" alt="Gear icon for settings">
-                </div>
-                <div class="feature-description-wrapper">
-                    <p class="feature-description-first-text">Incredibly Powerful Tool</p>
-                    <p class="feature-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
-                    </p>
-                </div>
-            </div>
-            <div class="feature-card">
-                <div class="feature-img-wrapper">
-                    <img class="icon-img" src="assets/icons/icon_3.png" alt="Flask icon representing a laboratory">
-                </div>
-                <div class="feature-description-wrapper">
-                    <p class="feature-description-first-text">Experimental Stuff</p>
-                    <p class="feature-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
-                    </p>
-                </div>
-            </div>
-            <div class="feature-card">
-                <div class="feature-img-wrapper">
-                    <img class="icon-img" src="assets/icons/icon_4.png" alt="Clock icon indicating time">
-                </div>
-                <div class="feature-description-wrapper">
-                    <p class="feature-description-first-text">Creatred to Make The Web Better</p>
-                    <p class="feature-description-second-text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. 
-                    </p>
-                </div>
+            <div class="features-main-text-big-screen-wrapper">
+                <h2 id="features-main-text-big-screen" class=" features-main-text">&lt;Here is what you get&gt;</h2>
+                <img id="ide-mobile" src="assets/ides/ide-mobile.png" alt="ide">
+                <img id="ide" src="assets/ides/ide.png" alt="ide">
             </div>
         </div>
-        <img id="ide-mobile" src="assets/ides/ide-mobile.png" alt="ide">
-        <img id="ide" src="assets/ides/ide.png" alt="ide">
     </section>
     <section id="reviews">
         <h2 class="reviews-and-pricing-main-text" id="reviews-main-text">People Are Talking About Fork</h2>
         <div class="companies-wrapper container">
-            <div>
+            <div class="company-item">
                 <img class="company-img" src="assets/companies/company_1.png" alt="Smashing magazine">
                 <p class="company-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. 
                 </p>
             </div>
-            <div>
+            <div class="company-item">
                 <img class="company-img" src="assets/companies/company_2.png" alt="Codrops">
                 <p class="company-text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend nibh.
                 </p>
             </div>
-            <div>
+            <div class="company-item">
                 <img class="company-img" src="assets/companies/company_3.png" alt="W">
                 <p class="company-text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula. 
                 </p>
             </div>
-            <div>
+            <div class="company-item" id="pixel_buddha">
                 <img class="company-img" src="assets/companies/company_4.png" alt="Pixel Buddha">
                 <p class="company-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. 
                 </p>
             </div>
-            <div>
+            <div class="company-item">
                 <img class="company-img" src="assets/companies/company_5.png" alt="Creative Bloq">
                 <p class="company-text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat faucibus. 
                 </p>
             </div>
-            <div>
+            <div class="company-item">
                 <img class="company-img" src="assets/companies/company_6.png" alt="TNW">
                 <p class="company-text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.
                 </p>
@@ -139,7 +145,7 @@
         </p>
     </section>
     <section id="pricing">
-        <div class="line-review container"></div>
+        <div class="line-price container"></div>
         <h2 class="reviews-and-pricing-main-text" id="price-main-text">Fork Subscription Pricing</h2>
         <div class="price-wrapper">
             <div class="subscription-card">
