--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -18,9 +18,9 @@
             <nav class="container">
                 <div class="nav-main">
                     <div class="logo">
-                        <img class="logo-img-hover" src="assets/main_logo/logo-hover.png" alt="main_logo_hover">
-                        <img class="logo-img" src="assets/main_logo/logo.png" alt="main_logo">
-                        <h4 id="logo-name">FORKIO</h4>
+                        <img class="logo-img-hover" src="assets/main-logo/logo-hover.png" alt="main_logo_hover">
+                        <img class="logo-img" src="assets/main-logo/logo.png" alt="main_logo">
+                        <h2 id="logo-name">FORKIO</h2>
                     </div>
                     <div class="nav-menu-and-button-wrapper-big-screen">
                         <ul class="nav-menu nav-menu-big-screen">
@@ -31,7 +31,7 @@
                         </ul>
                         <button class="purple-button nav-purple-button">Buy Now</button>
                     </div>
-                    <img class = "burger-menu" src="assets/burger_menu/burger-menu.png" alt="burger-menu">
+                    <img class = "burger-menu" src="assets/burger-menu/burger-menu.png" alt="burger-menu">
                 </div>
                 <ul class="nav-menu nav-menu-medium-screen">
                     <li>Overview</li>
@@ -41,18 +41,18 @@
                 </ul>
             </nav>
         </div>
-        <h1>Fork App</h1>
+        <h3 id="fork-app">Fork App</h3>
         <h3 class="container">A Real Gamechanger In The World Of Web-Development</h3>
-        <p>V. 2.8 FOR MAC AND WINDOWS</p>
+        <span>V. 2.8 FOR MAC AND WINDOWS</span>
     </header>
     <main class="container">
         <button class="purple-button download-purple-button">Download For Free Now</button>
-        <p id="free-trial-period">Unlimited 30-Days Trial Period</p>
+        <span id="free-trial-period">Unlimited 30-Days Trial Period</span>
         <h2 class="main-text">REVOLUTIONARY EDITOR</h2>
         <p id="revolutionaty-editor-text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
-        <img id ="github-buttons" src="assets/github_buttons/github_buttons.png" alt="github-buttons">
-        <img id="github-first-part" src="assets/github_buttons/github-buttons_small_1.png" alt="github-buttons-watch-star">
-        <img id="github-second-part" src="assets/github_buttons/github-buttons-small_2.png" alt="github-button-fork">
+        <img id ="github-buttons" src="assets/github-buttons/github-buttons-big.png" alt="github-buttons">
+        <img id="github-first-part" src="assets/github-buttons/github-buttons-small-1.png" alt="github-buttons-watch-star">
+        <img id="github-second-part" src="assets/github-buttons/github-buttons-small-2.png" alt="github-button-fork">
     </main>
     <section id="features" >
         <div class="container-big-screen">
@@ -60,7 +60,7 @@
             <div class="container features-wrapper">
                 <div class="feature-card">
                     <div class="feature-img-wrapper">
-                        <img class="icon-img" src="assets/icons/icon_1.png" alt="Website search icon">
+                        <img class="icon-img" src="assets/icons/icon-1.png" alt="Website search icon">
                     </div>
                     <div class="feature-description-wrapper">
                         <p class="feature-description-first-text">Creatred to Make The Web Better</p>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-img-wrapper">
-                        <img class="icon-img" src="assets/icons/icon_2.png" alt="Gear icon for settings">
+                        <img class="icon-img" src="assets/icons/icon-2.png" alt="Gear icon for settings">
                     </div>
                     <div class="feature-description-wrapper">
                         <p class="feature-description-first-text">Incredibly Powerful Tool</p>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-img-wrapper">
-                        <img class="icon-img" src="assets/icons/icon_3.png" alt="Flask icon representing a laboratory">
+                        <img class="icon-img" src="assets/icons/icon-3.png" alt="Flask icon representing a laboratory">
                     </div>
                     <div class="feature-description-wrapper">
                         <p class="feature-description-first-text">Experimental Stuff</p>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-img-wrapper">
-                        <img class="icon-img" src="assets/icons/icon_4.png" alt="Clock icon indicating time">
+                        <img class="icon-img" src="assets/icons/icon-4.png" alt="Clock icon indicating time">
                     </div>
                     <div class="feature-description-wrapper">
                         <p class="feature-description-first-text">Creatred to Make The Web Better</p>
@@ -110,32 +110,32 @@
         <h2 class="reviews-and-pricing-main-text" id="reviews-main-text">People Are Talking About Fork</h2>
         <div class="companies-wrapper container">
             <div class="company-item">
-                <img class="company-img" src="assets/companies/company_1.png" alt="Smashing magazine">
+                <img class="company-img" src="assets/companies/company-1.png" alt="Smashing magazine">
                 <p class="company-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. 
                 </p>
             </div>
             <div class="company-item">
-                <img class="company-img" src="assets/companies/company_2.png" alt="Codrops">
+                <img class="company-img" src="assets/companies/company-2.png" alt="Codrops">
                 <p class="company-text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend nibh.
                 </p>
             </div>
             <div class="company-item">
-                <img class="company-img" src="assets/companies/company_3.png" alt="W">
+                <img class="company-img" src="assets/companies/company-3.png" alt="W">
                 <p class="company-text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula. 
                 </p>
             </div>
             <div class="company-item" id="pixel_buddha">
-                <img class="company-img" src="assets/companies/company_4.png" alt="Pixel Buddha">
+                <img class="company-img" src="assets/companies/company-4.png" alt="Pixel Buddha">
                 <p class="company-text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. 
                 </p>
             </div>
             <div class="company-item">
-                <img class="company-img" src="assets/companies/company_5.png" alt="Creative Bloq">
+                <img class="company-img" src="assets/companies/company-5.png" alt="Creative Bloq">
                 <p class="company-text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat faucibus. 
                 </p>
             </div>
             <div class="company-item">
-                <img class="company-img" src="assets/companies/company_6.png" alt="TNW">
+                <img class="company-img" src="assets/companies/company-6.png" alt="TNW">
                 <p class="company-text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.
                 </p>
             </div>
